corrected title display clipping

--- a/src/Components/ActionPlate/actionPlate.css
+++ b/src/Components/ActionPlate/actionPlate.css
@@ -35,7 +35,7 @@
 
 .active-switch {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 5px 0 0 0;
     height: 1.1rem;
@@ -43,7 +43,7 @@
 
 .active-title-container {
     flex-basis: 40%;
-    margin-left: 70px;
+    margin-left: 65px;
 }
 
 .active-title {
@@ -54,17 +54,17 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
     display:inline-block;
-    -webkit-transform:scale(2.3,1); /* Safari and Chrome */
-    -moz-transform:scale(2.3,1); /* Firefox */
-    -ms-transform:scale(2.3,1); /* IE 9 */
-    -o-transform:scale(2.3,1); /* Opera */
-    transform:scale(2.3,1); /* W3C */
+    -webkit-transform:scale(2,1); /* Safari and Chrome */
+    -moz-transform:scale(2,1); /* Firefox */
+    -ms-transform:scale(2,1); /* IE 9 */
+    -o-transform:scale(2,1); /* Opera */
+    transform:scale(2,1); /* W3C */
 }
 
 .switch {
     border: none;
     background-color: transparent;
-    margin: 0 0 0 -70px;
+    margin: 0 12px 0 0;
     padding: 2px;
     font-size: 1.5rem;
     color: white;
